--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -5,7 +5,7 @@
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>免费节点 - Clash Node演示站 - 第5页</title>
+    <title>免费节点 - Clash Node演示站 - 第7页</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/addons/xcblog/css/clashnode/style-starter.css">
@@ -84,6 +84,23 @@
     <div class="container py-lg-5 py-3">
         <div class="row">
             <div class="col-md-8">
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
+                            <a href="/free-nodes/2024-2-24-clash-node.htm">
+                                <img src="/uploads/20240214/15f3c4212f40fda7ce92fc452dc790b7.webp" alt="2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-2-24-clash-node.htm">
+                            <h3 class="title-big">2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了加拿大、日本、新加坡、美国、欧洲、香港、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            2月24日                        </p>
+                    </div>
+                </div>
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
@@ -237,27 +254,20 @@
                             2月15日                        </p>
                     </div>
                 </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
-                                <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
-                            <h3 class="title-big">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、加拿大、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月14日                        </p>
-                    </div>
-                </div>
                 
-                <ul class="pagination"><li><a href="/free-nodes/page-5.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li class="active"><span>6</span></li> <li class="disabled"><span>&raquo;</span></li></ul>            </div>
+                <ul class="pagination"><li><a href="/free-nodes/page-5.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li class="active"><span>6</span></li><li><a href="/free-nodes/page-7.htm">7</a></li> <li><a href="/free-nodes/page-7.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-4-14-free-node-subscribe-links.htm">4月14日更新19.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、新加坡、日本、加拿大、香港、欧洲等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -348,23 +358,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-4-node-share.htm">4月4日更新19.5M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、美国、日本、欧洲、香港等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
+                                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
                                 <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
                             </div>
